--- a/website/public/index.html
+++ b/website/public/index.html
@@ -2,10 +2,10 @@
 <html lang="pt">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/magnifying-glass-solid.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/document-scanner-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/magnifying-glass-solid.svg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/document-scanner-icon.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
